--- a/PicoFirst/Resources/index.css
+++ b/PicoFirst/Resources/index.css
@@ -14,7 +14,7 @@ h1 {
     margin:0% 0% 3% 0%;
 }
 
-h2 {
+h2, a {
     margin:1% 0%;
     color:#1CA809;
 }
@@ -22,9 +22,19 @@ h2 {
 footer {
     clear:both;
     width:100%;
-    min-height:200px;
+    padding:3% 0%;
     background-color:#3d3d3d;
+    text-align:center;
 }
+
+    footer a {
+        text-decoration:none;
+        font-size:1.3em;
+    }
+
+        footer a:hover {
+            text-decoration:underline;
+        }
 
 .code h2 {
     border-bottom:solid 2px #21C40B;
@@ -34,7 +44,7 @@ pre {
   display: block;
   width: auto;
   overflow: auto;
-  max-height: 600px;
+  /*max-height: 600px;*/
   white-space: pre;
   word-wrap: normal;
   padding: 10px; 
