--- a/PicoFirst/Resources/index.css
+++ b/PicoFirst/Resources/index.css
@@ -52,11 +52,11 @@ pre {
 }
 
 @media screen and (min-width: 45em) {
-    .indexPage .about .grid_6 {
+    .indexPage .about .col_6 {
         width: 49%;
     }
 
-    .indexPage .code .grid_6 {
+    .indexPage .code .col_6 {
         width: 49%;
     }
 
@@ -66,7 +66,7 @@ pre {
 }
 
 @media screen and (min-width: 25em) {
-    .indexPage .demo .grid_6 {
+    .indexPage .demo .col_6 {
         width: 49%;
     }
 }
