--- a/PicoFirst/Resources/PicoFirstGrid.css
+++ b/PicoFirst/Resources/PicoFirstGrid.css
@@ -1,4 +1,8 @@
-﻿/*! Cory Bateman, Pico first css grid, MIT Licence */
+﻿/* 
+    Cory Bateman http://www.webdesignis.me 
+    MIT License http://opensource.org/licenses/MIT
+    Pico first css grid 
+*/
 
 /*! GRID CONSTANTS
 .col_1 { width: 6.5%; } 
