--- a/index.css
+++ b/index.css
@@ -1,86 +1,1 @@
-﻿body {
-  font-size:16px;
-  font-family: 'Open Sans', Helvetica, Arial, "Lucida Grande", sans- serif;
-  overflow-x:hidden;
-}
-
-.clearBoth {
-    clear:both;
-}
-
-h1,h2,h3 { 
-    font-family: Helvetica, Arial, "Lucida Grande", sans- serif;
-}
-
-h1 {
-    width:100%;
-    background-color:#51AD38;
-    padding:1%;
-    color:#FFF;
-    margin:0% 0% 3% 0%;
-}
-
-h2, a {
-    margin:1% 0%;
-    color:#51AD38;
-}
-
-footer {
-    clear:both;
-    width:100%;
-    padding:3% 0%;
-    text-align:center;
-}
-
-    footer a {
-        text-decoration:none;
-        font-size:1.3em;
-    }
-
-        footer a:hover {
-            text-decoration:underline;
-        }
-
-.code h2 {
-    border-bottom:solid 2px #21C40B;
-}
-
-hr {
-	height:0;
-	border-bottom:1px solid #51AD38;
-	width:100%;
-}
-
-pre {
-  display: block;
-  width: auto;
-  overflow: auto;
-  white-space: pre;
-  word-wrap: normal;
-  padding: 10px; 
-  color:#51AD38; 
-}
-
-/* Dual Grid */
-.dualGrid div, .pageClass div {
-    min-height: 65px;
-    padding-top: 35px;
-    background: #CCC;
-}
-
-.dualGrid, .pageClass {
-    text-align: center;
-    font-size: 1.1em;
-}
-
-@media all and (min-width: 30em) {
-    .pageClass .col__3 {
-        width: 23.5%;
-    }
-}
-
-@media all and (min-width: 40em) {
-    .pageClass .col__6 {
-        width: 49%;
-    }
-}
+﻿
