--- a/Content/index.scss
+++ b/Content/index.scss
@@ -41,7 +41,7 @@ header {
 	}
 }
 
-h2, a {
+h2, h3, a {
     margin:1% 0%;
     color:#51AD38;
 }
@@ -51,6 +51,14 @@ nav {
 		display:block;
 		padding:2%;
 	}
+}
+
+.linkHandle {
+	clear:both;
+}
+
+main {
+	overflow:auto;
 }
 
 footer {
@@ -153,16 +161,34 @@ code pre {
 .coreGrid, .pageClass {
     text-align: center;
     font-size: 1.1em;
+}
 
-	div {
-		min-height: 65px;
-		padding-top: 35px;
-		background: #CCC;
-	}
+.box {
+	min-height: 65px;
+	padding-top: 35px;
+	background: #CCC;
 }
 
 @media all and (min-width: 33em) {
     .pageClass .col__6 {
-        width: 49%;
+        width: 50%;
     }
+}
+
+@media all and (min-width: 45em) {
+	nav, header {
+		position:fixed;
+	}
+
+	nav {
+		width: 200px;
+	}
+
+	.headerBuff {
+		margin-top:80px;
+	}
+
+	.linkHandle {
+		margin-bottom:83px;
+	}
 }
