--- a/Content/_util.scss
+++ b/Content/_util.scss
@@ -7,6 +7,7 @@ $fix-mqs: false !default;
         @if $fix-mqs >= $width {
             // ...output the content the user gave us.
             @content;
+			.test {}
         }
     }
     @else {
