--- a/Content/coreGrid.scss
+++ b/Content/coreGrid.scss
@@ -80,18 +80,18 @@
 .col__11,
 .col__12 {
     width:100%;
-    padding: 1%;
+    padding: 0 8px 16px 8px;
     float: left;
     display: block;
     min-height:1px;
 }
 
-.alpha { margin-left:0; }
-.omega { margin-right:0; }
+.alpha { padding-left:0; }
+.omega { padding-right:0; }
 
 /* --- Small Auto Grid 540px and greater --- */
-@media all and (min-width: 33.75em) {
-	.col_1_sm { width: 8.333333333333333%; } 
+@include respond-min(33.75em) {
+	.col_1_sm { width: 8.333%; } 
 	.col_2_sm { width: 16.666%; } 
 	.col_3_sm { width: 25%; } 
 	.col_4_sm { width: 33.333%; } 
@@ -106,7 +106,7 @@
 }
 
 /* --- Primary Medium Auto Grid 720px and greater --- */
-@media all and (min-width: 45em) {
+@include respond-min(45em) {
 	.col_1, .col_1_md { width: 8.333%; } 
 	.col_2, .col_2_md { width: 16.666%; } 
 	.col_3, .col_3_md { width: 25%; } 
@@ -122,8 +122,8 @@
 }
 
 /* --- Large Auto Grid 960px and greater --- */
-@media all and (min-width: 60em) {
-	.col_1_lg { width: 8.333333333333333%; } 
+@include respond-min(60em) {
+	.col_1_lg { width: 8.333%; } 
 	.col_2_lg { width: 16.666%; } 
 	.col_3_lg { width: 25%; } 
 	.col_4_lg { width: 33.333%; } 
@@ -161,7 +161,7 @@
 }
 
 .container {
-    width: 96%;
+    width: 100%;
     max-width: 1100px;
     margin: 0 auto;
     padding:0 2%;
