--- a/Content/index.scss
+++ b/Content/index.scss
@@ -153,7 +153,6 @@ code pre {
   overflow: auto;
   white-space: pre;
   word-wrap: normal;
-  padding: 10px; 
   color:#51AD38; 
 }
 
@@ -164,18 +163,17 @@ code pre {
 }
 
 .box {
-	min-height: 65px;
-	padding-top: 35px;
+	padding: 15px 0;
 	background: #CCC;
 }
 
-@media all and (min-width: 33em) {
+@include respond-min(33em) {
     .pageClass .col__6 {
         width: 50%;
     }
 }
 
-@media all and (min-width: 45em) {
+@include respond-min(45em) {
 	nav, header {
 		position:fixed;
 	}
@@ -189,6 +187,6 @@ code pre {
 	}
 
 	.linkHandle {
-		margin-bottom:83px;
+		margin-bottom:50px;
 	}
 }
