--- a/Content/index.css
+++ b/Content/index.css
@@ -400,8 +400,7 @@ table {
   border-spacing: 0;
   border: 1px solid #2d2d2d;
   width: 100%;
-  background: #FFF;
-  font-size: 0.9em; }
+  background: #FFF; }
 
 td, th {
   border: 1px solid #2d2d2d;
