--- a/Content/oldIE.css
+++ b/Content/oldIE.css
@@ -12,7 +12,19 @@
   box-sizing: border-box; }
 
 /* --- Column Set Up --- */
-.row
+.row,
+.col_1_xs,
+.col_2_xs,
+.col_3_xs,
+.col_4_xs,
+.col_5_xs,
+.col_6_xs,
+.col_7_xs,
+.col_8_xs,
+.col_9_xs,
+.col_10_xs,
+.col_11_xs,
+.col_12_xs,
 .col_1_sm,
 .col_2_sm,
 .col_3_sm,
@@ -85,6 +97,49 @@
 .omega {
   padding-right: 0; }
 
+/* --- Extra Small Auto Grid --- */
+.col_1_xs {
+  width: 8.333%; }
+
+.col_2_xs {
+  width: 16.666%; }
+
+.col_3_xs {
+  width: 25%; }
+
+.col_4_xs {
+  width: 33.333%; }
+
+.col_5_xs {
+  width: 41.665%; }
+
+.col_6_xs {
+  width: 50%; }
+
+.col_7_xs {
+  width: 58.331%; }
+
+.col_8_xs {
+  width: 66.664%; }
+
+.col_9_xs {
+  width: 75%; }
+
+.col_10_xs {
+  width: 83.33%; }
+
+.col_11_xs {
+  width: 91.663%; }
+
+.col_12_xs {
+  width: 100%; }
+
+.visible_xs, .visible {
+  display: block; }
+
+.hidden_xs, .hidden {
+  display: none; }
+
 /* --- Small Auto Grid 540px and greater --- */
 .col_1_sm {
   width: 8.333%; }
@@ -121,6 +176,12 @@
 
 .col_12_sm {
   width: 100%; }
+
+.visible_sm {
+  display: block; }
+
+.hidden_sm {
+  display: none; }
 
 /* --- Primary Medium Auto Grid 720px and greater --- */
 .col_1, .col_1_md {
@@ -159,6 +220,12 @@
 .col_12, .col_12_md {
   width: 100%; }
 
+.visible_md {
+  display: block; }
+
+.hidden_md {
+  display: none; }
+
 /* --- Large Auto Grid 960px and greater --- */
 .col_1_lg {
   width: 8.333%; }
@@ -195,6 +262,12 @@
 
 .col_12_lg {
   width: 100%; }
+
+.visible_lg {
+  display: block; }
+
+.hidden_lg {
+  display: none; }
 
 /* --- Secondary Semantic Control Grid ---
 .col__1 { width: 8.333%; } 
