--- a/Content/coreGrid.scss
+++ b/Content/coreGrid.scss
@@ -1,9 +1,9 @@
 @import '_util';
 
 /*! 
-    https://github.com/splintercode/DualGrid
+    https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Dual Grid 
+    Core Grid 1.0
 */
 
 *, *:before, *:after {
