--- a/Content/oldIE.css
+++ b/Content/oldIE.css
@@ -1,7 +1,7 @@
 /* 
-    https://github.com/splintercode/DualGrid
+    https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Dual Grid 
+    Core Grid 1.0
 */
 *, *:before, *:after {
   /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
