Minor bug fixes and maps

--- a/Content/coreGrid.scss
+++ b/Content/coreGrid.scss
@@ -131,7 +131,7 @@
 	.col-10-sm { width: 83.33%; } 
 	.col-11-sm { width: 91.663%; } 
 	.col-12-sm { width: 100%; }
-	.visble-sm { display:block; }
+	.visible-sm { display:block; }
 	.hidden_sm { display:none; }
 }
 
