Minor bug fixes
Minor naming issues corrected

--- a/Content/coreGrid.scss
+++ b/Content/coreGrid.scss
@@ -132,7 +132,7 @@
 	.col-11-sm { width: 91.663%; } 
 	.col-12-sm { width: 100%; }
 	.visible-sm { display:block; }
-	.hidden_sm { display:none; }
+	.hidden-sm { display:none; }
 }
 
 /* --- Primary Medium Auto Grid 720px and greater --- */
@@ -146,9 +146,9 @@
 	.col-7, .col-7-md { width: 58.331%; }
 	.col-8, .col-8-md { width: 66.664%; } 
 	.col-9, .col-9-md { width: 75%; } 
-	.col-10, .col_10-md { width: 83.33%; } 
-	.col-11, .col_11-md { width: 91.663%; } 
-	.col-12, .col_12-md { width: 100%; } 
+	.col-10, .col-10-md { width: 83.33%; } 
+	.col-11, .col-11-md { width: 91.663%; } 
+	.col-12, .col-12-md { width: 100%; } 
 	.visible-md { display:block; }
 	.hidden-md { display:none; }
 }
