--- a/Content/coreGrid.css
+++ b/Content/coreGrid.css
@@ -1,4 +1,4 @@
-﻿/*! 
+/*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
     Core Grid 1.1
@@ -96,7 +96,7 @@
     width: 100%; }
   .visible-sm {
     display: block; }
-  .hidden_sm {
+  .hidden-sm {
     display: none; } }
 
 /* --- Primary Medium Auto Grid 720px and greater --- */
@@ -119,11 +119,11 @@
     width: 66.664%; }
   .col-9, .col-9-md {
     width: 75%; }
-  .col-10, .col_10-md {
+  .col-10, .col-10-md {
     width: 83.33%; }
-  .col-11, .col_11-md {
+  .col-11, .col-11-md {
     width: 91.663%; }
-  .col-12, .col_12-md {
+  .col-12, .col-12-md {
     width: 100%; }
   .visible-md {
     display: block; }
@@ -189,5 +189,3 @@
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 2%; }
-
-/*# sourceMappingURL=coreGrid.css.map */
