--- a/Content/coreGrid.css
+++ b/Content/coreGrid.css
@@ -27,37 +27,37 @@
 
 /* --- Extra Small Auto Grid --- */
 .col-1-xs {
-  width: 8.333%; }
+  width: 8.33333%; }
 
 .col-2-xs {
-  width: 16.666%; }
+  width: 16.66667%; }
 
 .col-3-xs {
   width: 25%; }
 
 .col-4-xs {
-  width: 33.333%; }
+  width: 33.33333%; }
 
 .col-5-xs {
-  width: 41.665%; }
+  width: 41.66667%; }
 
 .col-6-xs {
   width: 50%; }
 
 .col-7-xs {
-  width: 58.331%; }
+  width: 58.33333%; }
 
 .col-8-xs {
-  width: 66.664%; }
+  width: 66.66667%; }
 
 .col-9-xs {
   width: 75%; }
 
 .col-10-xs {
-  width: 83.33%; }
+  width: 83.33333%; }
 
 .col-11-xs {
-  width: 91.663%; }
+  width: 91.66667%; }
 
 .col-12-xs {
   width: 100%; }
@@ -71,27 +71,27 @@
 /* --- Small Auto Grid 540px and greater --- */
 @media screen and (min-width: 33.75em) {
   .col-1-sm {
-    width: 8.333%; }
+    width: 8.33333%; }
   .col-2-sm {
-    width: 16.666%; }
+    width: 16.66667%; }
   .col-3-sm {
     width: 25%; }
   .col-4-sm {
-    width: 33.333%; }
+    width: 33.33333%; }
   .col-5-sm {
-    width: 41.665%; }
+    width: 41.66667%; }
   .col-6-sm {
     width: 50%; }
   .col-7-sm {
-    width: 58.331%; }
+    width: 58.33333%; }
   .col-8-sm {
-    width: 66.664%; }
+    width: 66.66667%; }
   .col-9-sm {
     width: 75%; }
   .col-10-sm {
-    width: 83.33%; }
+    width: 83.33333%; }
   .col-11-sm {
-    width: 91.663%; }
+    width: 91.66667%; }
   .col-12-sm {
     width: 100%; }
   .visible-sm {
@@ -101,29 +101,29 @@
 
 /* --- Primary Medium Auto Grid 720px and greater --- */
 @media screen and (min-width: 45em) {
-  .col-1, .col-1-md {
-    width: 8.333%; }
-  .col-2, .col-2-md {
-    width: 16.666%; }
-  .col-3, .col-3-md {
+  .col-1-md, .col-1 {
+    width: 8.33333%; }
+  .col-2-md, .col-2 {
+    width: 16.66667%; }
+  .col-3-md, .col-3 {
     width: 25%; }
-  .col-4, .col-4-md {
-    width: 33.333%; }
-  .col-5, .col-5-md {
-    width: 41.665%; }
-  .col-6, .col-6-md {
+  .col-4-md, .col-4 {
+    width: 33.33333%; }
+  .col-5-md, .col-5 {
+    width: 41.66667%; }
+  .col-6-md, .col-6 {
     width: 50%; }
-  .col-7, .col-7-md {
-    width: 58.331%; }
-  .col-8, .col-8-md {
-    width: 66.664%; }
-  .col-9, .col-9-md {
+  .col-7-md, .col-7 {
+    width: 58.33333%; }
+  .col-8-md, .col-8 {
+    width: 66.66667%; }
+  .col-9-md, .col-9 {
     width: 75%; }
-  .col-10, .col-10-md {
-    width: 83.33%; }
-  .col-11, .col-11-md {
-    width: 91.663%; }
-  .col-12, .col-12-md {
+  .col-10-md, .col-10 {
+    width: 83.33333%; }
+  .col-11-md, .col-11 {
+    width: 91.66667%; }
+  .col-12-md, .col-12 {
     width: 100%; }
   .visible-md {
     display: block; }
@@ -133,27 +133,27 @@
 /* --- Large Auto Grid 960px and greater --- */
 @media screen and (min-width: 60em) {
   .col-1-lg {
-    width: 8.333%; }
+    width: 8.33333%; }
   .col-2-lg {
-    width: 16.666%; }
+    width: 16.66667%; }
   .col-3-lg {
     width: 25%; }
   .col-4-lg {
-    width: 33.333%; }
+    width: 33.33333%; }
   .col-5-lg {
-    width: 41.665%; }
+    width: 41.66667%; }
   .col-6-lg {
     width: 50%; }
   .col-7-lg {
-    width: 58.331%; }
+    width: 58.33333%; }
   .col-8-lg {
-    width: 66.664%; }
+    width: 66.66667%; }
   .col-9-lg {
     width: 75%; }
   .col-10-lg {
-    width: 83.33%; }
+    width: 83.33333%; }
   .col-11-lg {
-    width: 91.663%; }
+    width: 91.66667%; }
   .col-12-lg {
     width: 100%; }
   .visible-lg {
@@ -189,3 +189,5 @@
   max-width: 1100px;
   margin: 0 auto;
   padding: 0 2%; }
+
+/*# sourceMappingURL=coreGrid.css.map */
