--- a/Content/coreGrid.scss
+++ b/Content/coreGrid.scss
@@ -6,15 +6,18 @@
     Core Grid 1.1
 */
 
+$sm-break: 33.75em;
+$md-break: 45em;
+$lg-break: 60em;
+$cols: 12;
+
 *, *:before, *:after {
-  /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
-  -webkit-box-sizing: border-box; 
-
-  /* Firefox (desktop or Android) 28- */
-  -moz-box-sizing: border-box;
-
-  /* Firefox 29+, IE 8+, Chrome 10+, Safari 5.1+, Opera 9.5+, iOS 5+, Opera Mini Anything, Blackberry 10+, Android 4+ */
-  box-sizing: border-box;
+    /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
+    -webkit-box-sizing: border-box;
+    /* Firefox (desktop or Android) 28- */
+    -moz-box-sizing: border-box;
+    /* Firefox 29+, IE 8+, Chrome 10+, Safari 5.1+, Opera 9.5+, iOS 5+, Opera Mini Anything, Blackberry 10+, Android 4+ */
+    box-sizing: border-box;
 }
 
 /* --- Column Set Up --- */
@@ -91,84 +94,85 @@
 .col-10-c,
 .col-11-c,
 .col-12-c {
-    width:100%;
+    width: 100%;
     padding: 0 8px 16px 8px;
     float: left;
     display: block;
-    min-height:1px;
+    min-height: 1px;
 }
 
-.alpha { padding-left:0; }
-.omega { padding-right:0; }
+.alpha {
+    padding-left: 0;
+}
+
+.omega {
+    padding-right: 0;
+}
 
 /* --- Extra Small Auto Grid --- */
-.col-1-xs { width: 8.333%; } 
-.col-2-xs { width: 16.666%; } 
-.col-3-xs { width: 25%; } 
-.col-4-xs { width: 33.333%; } 
-.col-5-xs { width: 41.665%; } 
-.col-6-xs { width: 50%; } 
-.col-7-xs { width: 58.331%; }
-.col-8-xs { width: 66.664%; } 
-.col-9-xs { width: 75%; } 
-.col-10-xs { width: 83.33%; } 
-.col-11-xs { width: 91.663%; } 
-.col-12-xs { width: 100%; } 
-.visible-xs, .visible { display:block; }
-.hidden-xs, .hidden { display:none; }
+@for $i from 1 through $cols {
+    .col-#{$i}-#{'xs'} {
+        width: 1 * percentage($i/$cols)
+    }
+}
+
+.visible-xs, .visible {
+    display: block;
+}
+
+.hidden-xs, .hidden {
+    display: none;
+}
 
 /* --- Small Auto Grid 540px and greater --- */
-@include respond-min(33.75em) {
-	.col-1-sm { width: 8.333%; } 
-	.col-2-sm { width: 16.666%; } 
-	.col-3-sm { width: 25%; } 
-	.col-4-sm { width: 33.333%; } 
-	.col-5-sm { width: 41.665%; } 
-	.col-6-sm { width: 50%; } 
-	.col-7-sm { width: 58.331%; }
-	.col-8-sm { width: 66.664%; } 
-	.col-9-sm { width: 75%; } 
-	.col-10-sm { width: 83.33%; } 
-	.col-11-sm { width: 91.663%; } 
-	.col-12-sm { width: 100%; }
-	.visible-sm { display:block; }
-	.hidden-sm { display:none; }
+@include respond-min($sm-break) {
+    @for $i from 1 through $cols {
+        .col-#{$i}-#{'sm'} {
+            width: 1 * percentage($i/$cols)
+        }
+    }
+
+    .visible-sm {
+        display: block;
+    }
+
+    .hidden-sm {
+        display: none;
+    }
 }
 
 /* --- Primary Medium Auto Grid 720px and greater --- */
-@include respond-min(45em) {
-	.col-1, .col-1-md { width: 8.333%; } 
-	.col-2, .col-2-md { width: 16.666%; } 
-	.col-3, .col-3-md { width: 25%; } 
-	.col-4, .col-4-md { width: 33.333%; } 
-	.col-5, .col-5-md { width: 41.665%; } 
-	.col-6, .col-6-md { width: 50%; } 
-	.col-7, .col-7-md { width: 58.331%; }
-	.col-8, .col-8-md { width: 66.664%; } 
-	.col-9, .col-9-md { width: 75%; } 
-	.col-10, .col-10-md { width: 83.33%; } 
-	.col-11, .col-11-md { width: 91.663%; } 
-	.col-12, .col-12-md { width: 100%; } 
-	.visible-md { display:block; }
-	.hidden-md { display:none; }
+@include respond-min($md-break) {
+    @for $i from 1 through $cols {
+        .col-#{$i}-#{'md'}, .col-#{$i} {
+            width: 1 * percentage($i/$cols)
+        }
+    }
+
+    .visible-md {
+        display: block;
+    }
+
+    .hidden-md {
+        display: none;
+    }
 }
 
 /* --- Large Auto Grid 960px and greater --- */
-@include respond-min(60em) {
-	.col-1-lg { width: 8.333%; } 
-	.col-2-lg { width: 16.666%; } 
-	.col-3-lg { width: 25%; } 
-	.col-4-lg { width: 33.333%; } 
-	.col-5-lg { width: 41.665%; } 
-	.col-6-lg { width: 50%; } 
-	.col-7-lg { width: 58.331%; }
-	.col-8-lg { width: 66.664%; } 
-	.col-9-lg { width: 75%; } 
-	.col-10-lg { width: 83.33%; } 
-	.col-11-lg { width: 91.663%; } 
-	.col-12-lg { width: 100%; }
-	.visible-lg { display:block; }
-	.hidden-lg { display:none; }
+@include respond-min($lg-break) {
+    @for $i from 1 through $cols {
+        .col-#{$i}-#{'lg'} {
+            width: 1 * percentage($i/$cols)
+        }
+    }
+
+    .visible-lg {
+        display: block;
+    }
+
+    .hidden-lg {
+        display: none;
+    }
 }
 
 
@@ -186,21 +190,21 @@
 .col-11-c { width: 91.663%; } 
 .col-12-c { width: 100%; } */
 
-.clearfix:after { 
-   content: "."; 
-   visibility: hidden; 
-   display: block; 
-   height: 0; 
-   clear: both;
+.clearfix:after {
+    content: ".";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
 }
 
 .clear-both {
-	clear:both;
+    clear: both;
 }
 
 .container {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
-    padding:0 2%;
+    padding: 0 2%;
 }
