--- a/Content/coreGrid.scss
+++ b/Content/coreGrid.scss
@@ -1,9 +1,8 @@
 @import '_util';
-
 /*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Core Grid 1.1.3
+    Core Grid 1.1.4
 */
 
 $container-width: 1100px;
@@ -22,19 +21,6 @@ $cols: 12;
 }
 
 /* --- Column Set Up --- */
-.row,
-.col-1-contain,
-.col-2-contain,
-.col-3-contain,
-.col-4-contain,
-.col-5-contain,
-.col-6-contain,
-.col-7-contain,
-.col-8-contain,
-.col-9-contain,
-.col-10-contain,
-.col-11-contain,
-.col-12-contain,
 .col-1-xs,
 .col-2-xs,
 .col-3-xs,
@@ -122,12 +108,26 @@ $cols: 12;
     padding-right: 0;
 }
 
+.row {
+    clear:both;
+}
+
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
 /* #region --- Contain Box wrappers --- */
 $col-width: ($container-width / 12);
+
 @for $i from 1 through $cols {
     .col-#{$i}-#{'contain'} {
-        width:100%;
+        width: 100%;
         max-width: ($col-width * $i);
+        padding: 0 0 16px 0;
     }
 }
 /* #endregion */
@@ -135,7 +135,7 @@ $col-width: ($container-width / 12);
 /* #region --- Extra Small Auto Grid --- */
 @for $i from 1 through $cols {
     .col-#{$i}-#{'xs'} {
-        width: 1 * percentage($i/$cols)
+        width: 1 * percentage($i/$cols);
     }
 }
 
@@ -152,7 +152,7 @@ $col-width: ($container-width / 12);
 @include respond-min($sm-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'sm'} {
-            width: 1 * percentage($i/$cols)
+            width: 1 * percentage($i/$cols);
         }
     }
 
@@ -170,7 +170,7 @@ $col-width: ($container-width / 12);
 @include respond-min($md-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'md'}, .col-#{$i} {
-            width: 1 * percentage($i/$cols)
+            width: 1 * percentage($i/$cols);
         }
     }
 
@@ -188,7 +188,7 @@ $col-width: ($container-width / 12);
 @include respond-min($lg-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'lg'} {
-            width: 1 * percentage($i/$cols)
+            width: 1 * percentage($i/$cols);
         }
     }
 
