--- a/Src/coreGrid.css
+++ b/Src/coreGrid.css
@@ -1,7 +1,7 @@
 /*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Core Grid 1.3
+    Core Grid 1.5.0
 */
 *, *:before, *:after {
   /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
@@ -132,138 +132,99 @@
 
 /* #endregion */
 /* #region --- Small Auto Grid 540px and greater --- */
-.col-1-sm {
-  width: 8.33333%; }
-
-.col-2-sm {
-  width: 16.66667%; }
-
-.col-3-sm {
-  width: 25%; }
-
-.col-4-sm {
-  width: 33.33333%; }
-
-.col-5-sm {
-  width: 41.66667%; }
-
-.col-6-sm {
-  width: 50%; }
-
-.col-7-sm {
-  width: 58.33333%; }
-
-.col-8-sm {
-  width: 66.66667%; }
-
-.col-9-sm {
-  width: 75%; }
-
-.col-10-sm {
-  width: 83.33333%; }
-
-.col-11-sm {
-  width: 91.66667%; }
-
-.col-12-sm {
-  width: 100%; }
-
-.visible-sm {
-  display: block; }
-
-.hidden-sm {
-  display: none; }
-
+@media screen and (min-width: 33.75em) {
+  .col-1-sm {
+    width: 8.33333%; }
+  .col-2-sm {
+    width: 16.66667%; }
+  .col-3-sm {
+    width: 25%; }
+  .col-4-sm {
+    width: 33.33333%; }
+  .col-5-sm {
+    width: 41.66667%; }
+  .col-6-sm {
+    width: 50%; }
+  .col-7-sm {
+    width: 58.33333%; }
+  .col-8-sm {
+    width: 66.66667%; }
+  .col-9-sm {
+    width: 75%; }
+  .col-10-sm {
+    width: 83.33333%; }
+  .col-11-sm {
+    width: 91.66667%; }
+  .col-12-sm {
+    width: 100%; }
+  .visible-sm {
+    display: block; }
+  .hidden-sm {
+    display: none; } }
 
 /* #endregion */
 /* #region --- Primary Medium Auto Grid 720px and greater --- */
-.col-1-md, .col-1 {
-  width: 8.33333%; }
-
-.col-2-md, .col-2 {
-  width: 16.66667%; }
-
-.col-3-md, .col-3 {
-  width: 25%; }
-
-.col-4-md, .col-4 {
-  width: 33.33333%; }
-
-.col-5-md, .col-5 {
-  width: 41.66667%; }
-
-.col-6-md, .col-6 {
-  width: 50%; }
-
-.col-7-md, .col-7 {
-  width: 58.33333%; }
-
-.col-8-md, .col-8 {
-  width: 66.66667%; }
-
-.col-9-md, .col-9 {
-  width: 75%; }
-
-.col-10-md, .col-10 {
-  width: 83.33333%; }
-
-.col-11-md, .col-11 {
-  width: 91.66667%; }
-
-.col-12-md, .col-12 {
-  width: 100%; }
-
-.visible-md {
-  display: block; }
-
-.hidden-md {
-  display: none; }
-
+@media screen and (min-width: 45em) {
+  .col-1-md, .col-1 {
+    width: 8.33333%; }
+  .col-2-md, .col-2 {
+    width: 16.66667%; }
+  .col-3-md, .col-3 {
+    width: 25%; }
+  .col-4-md, .col-4 {
+    width: 33.33333%; }
+  .col-5-md, .col-5 {
+    width: 41.66667%; }
+  .col-6-md, .col-6 {
+    width: 50%; }
+  .col-7-md, .col-7 {
+    width: 58.33333%; }
+  .col-8-md, .col-8 {
+    width: 66.66667%; }
+  .col-9-md, .col-9 {
+    width: 75%; }
+  .col-10-md, .col-10 {
+    width: 83.33333%; }
+  .col-11-md, .col-11 {
+    width: 91.66667%; }
+  .col-12-md, .col-12 {
+    width: 100%; }
+  .visible-md {
+    display: block; }
+  .hidden-md {
+    display: none; } }
 
 /* #endregion */
 /* #region --- Large Auto Grid 960px and greater --- */
-.col-1-lg {
-  width: 8.33333%; }
-
-.col-2-lg {
-  width: 16.66667%; }
-
-.col-3-lg {
-  width: 25%; }
-
-.col-4-lg {
-  width: 33.33333%; }
-
-.col-5-lg {
-  width: 41.66667%; }
-
-.col-6-lg {
-  width: 50%; }
-
-.col-7-lg {
-  width: 58.33333%; }
-
-.col-8-lg {
-  width: 66.66667%; }
-
-.col-9-lg {
-  width: 75%; }
-
-.col-10-lg {
-  width: 83.33333%; }
-
-.col-11-lg {
-  width: 91.66667%; }
-
-.col-12-lg {
-  width: 100%; }
-
-.visible-lg {
-  display: block; }
-
-.hidden-lg {
-  display: none; }
-
+@media screen and (min-width: 60em) {
+  .col-1-lg {
+    width: 8.33333%; }
+  .col-2-lg {
+    width: 16.66667%; }
+  .col-3-lg {
+    width: 25%; }
+  .col-4-lg {
+    width: 33.33333%; }
+  .col-5-lg {
+    width: 41.66667%; }
+  .col-6-lg {
+    width: 50%; }
+  .col-7-lg {
+    width: 58.33333%; }
+  .col-8-lg {
+    width: 66.66667%; }
+  .col-9-lg {
+    width: 75%; }
+  .col-10-lg {
+    width: 83.33333%; }
+  .col-11-lg {
+    width: 91.66667%; }
+  .col-12-lg {
+    width: 100%; }
+  .visible-lg {
+    display: block; }
+  .hidden-lg {
+    display: none; } }
 
 /* #endregion */
 /* --- Secondary Semantic Control Grid ---
@@ -295,4 +256,4 @@
   margin: 0 auto;
   padding: 0 2%; }
 
-/*# sourceMappingURL=Oldie.css.map */
+/*# sourceMappingURL=coreGrid.css.map */
