--- a/Content/index.scss
+++ b/Content/index.scss
@@ -188,8 +188,9 @@ thead, thead th {
     font-size: 1.1em;
 }
 
-.grid-box {
+.core-grid p {
     padding: 15px 0;
+    margin:0;
     background: #CCC;
 }
 
