--- a/Src/coreGrid.scss
+++ b/Src/coreGrid.scss
@@ -3,7 +3,7 @@
 /*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Core Grid 1.5.0
+    Core Grid 1.5.1
 */
 
 $container-width: 1100px;
@@ -22,90 +22,7 @@ $cols: 12;
 }
 
 /* --- Column Set Up --- */
-.col-1-contain,
-.col-2-contain,
-.col-3-contain,
-.col-4-contain,
-.col-5-contain,
-.col-6-contain,
-.col-7-contain,
-.col-8-contain,
-.col-9-contain,
-.col-10-contain,
-.col-11-contain,
-.col-12-contain,
-.col-1-xs,
-.col-2-xs,
-.col-3-xs,
-.col-4-xs,
-.col-5-xs,
-.col-6-xs,
-.col-7-xs,
-.col-8-xs,
-.col-9-xs,
-.col-10-xs,
-.col-11-xs,
-.col-12-xs,
-.col-1-sm,
-.col-2-sm,
-.col-3-sm,
-.col-4-sm,
-.col-5-sm,
-.col-6-sm,
-.col-7-sm,
-.col-8-sm,
-.col-9-sm,
-.col-10-sm,
-.col-11-sm,
-.col-12-sm,
-.col-1-md,
-.col-2-md,
-.col-3-md,
-.col-4-md,
-.col-5-md,
-.col-6-md,
-.col-7-md,
-.col-8-md,
-.col-9-md,
-.col-10-md,
-.col-11-md,
-.col-12-md,
-.col-1,
-.col-2,
-.col-3,
-.col-4,
-.col-5,
-.col-6,
-.col-7,
-.col-8,
-.col-9,
-.col-10,
-.col-11,
-.col-12,
-.col-1-lg,
-.col-2-lg,
-.col-3-lg,
-.col-4-lg,
-.col-5-lg,
-.col-6-lg,
-.col-7-lg,
-.col-8-lg,
-.col-9-lg,
-.col-10-lg,
-.col-11-lg,
-.col-12-lg,
-.col-1-c,
-.col-2-c,
-.col-3-c,
-.col-4-c,
-.col-5-c,
-.col-6-c,
-.col-7-c,
-.col-8-c,
-.col-9-c,
-.col-10-c,
-.col-11-c,
-.col-12-c {
+.extend-col {
     width: 100%;
     padding: 0 8px 16px 8px;
     float: left;
@@ -121,13 +38,6 @@ $cols: 12;
     padding-right: 0;
 }
 
-.row {
-    clear:both;
-    overflow:hidden;
-    margin-left: -8px;
-    margin-right:-8px;
-}
-
 .float-left {
     float: left;
 }
@@ -136,12 +46,39 @@ $cols: 12;
     float: right;
 }
 
+.clear-both {
+    clear: both;
+}
+
+.clearfix:after {
+    content: ".";
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+}
+
+.container {
+    width: 100%;
+    max-width: $container-width;
+    margin: 0 auto;
+    padding: 0 2%;
+}
+
+.row {
+    clear:both;
+    overflow:hidden;
+    margin-left: -8px;
+    margin-right:-8px;
+}
+
 /* #region --- Contain Box wrappers --- */
 $col-width: ($container-width / 12);
 @for $i from 1 through $cols {
     .col-#{$i}-#{'contain'} {
         width:100%;
         max-width: ($col-width * $i);
+        @extend .extend-col;
     }
 }
 /* #endregion */
@@ -149,7 +86,8 @@ $col-width: ($container-width / 12);
 /* #region --- Extra Small Auto Grid --- */
 @for $i from 1 through $cols {
     .col-#{$i}-#{'xs'} {
-        width: 1 * percentage($i/$cols)
+        width: 1 * percentage($i/$cols);
+        @extend .extend-col;
     }
 }
 
@@ -166,7 +104,8 @@ $col-width: ($container-width / 12);
 @include respond-min($sm-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'sm'} {
-            width: 1 * percentage($i/$cols)
+            width: 1 * percentage($i/$cols);
+            @extend .extend-col;
         }
     }
 
@@ -184,7 +123,8 @@ $col-width: ($container-width / 12);
 @include respond-min($md-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'md'}, .col-#{$i} {
-            width: 1 * percentage($i/$cols)
+            width: 1 * percentage($i/$cols);
+            @extend .extend-col;
         }
     }
 
@@ -202,7 +142,8 @@ $col-width: ($container-width / 12);
 @include respond-min($lg-break) {
     @for $i from 1 through $cols {
         .col-#{$i}-#{'lg'} {
-            width: 1 * percentage($i/$cols)
+            width: 1 * percentage($i/$cols);
+            @extend .extend-col;
         }
     }
 
@@ -216,7 +157,8 @@ $col-width: ($container-width / 12);
 }
 /* #endregion */
 
-/* --- Secondary Semantic Control Grid ---
+/* #region --- Secondary Semantic Control Grid --- */
+/*
 .col-1-c { width: 8.333%; } 
 .col-2-c { width: 16.666%; } 
 .col-3-c { width: 25%; } 
@@ -228,23 +170,12 @@ $col-width: ($container-width / 12);
 .col-9-c { width: 75%; } 
 .col-10-c { width: 83.33%; } 
 .col-11-c { width: 91.663%; } 
-.col-12-c { width: 100%; } */
+.col-12-c { width: 100%; } 
+*/
 
-.clearfix:after {
-    content: ".";
-    visibility: hidden;
-    display: block;
-    height: 0;
-    clear: both;
+@for $i from 1 through $cols {
+    .col-#{$i}-#{'c'} {
+        @extend .extend-col;
+    }
 }
-
-.clear-both {
-    clear: both;
-}
-
-.container {
-    width: 100%;
-    max-width: $container-width;
-    margin: 0 auto;
-    padding: 0 2%;
-}
+/* #endregion */
