--- a/Src/coreGrid.scss
+++ b/Src/coreGrid.scss
@@ -79,6 +79,7 @@ $col-width: ($container-width / 12);
         width:100%;
         max-width: ($col-width * $i);
         @extend .extend-col;
+        padding: 0;
     }
 }
 /* #endregion */
@@ -179,3 +180,52 @@ $col-width: ($container-width / 12);
     }
 }
 /* #endregion */
+
+/* --- Display --- */
+.display-none {
+    display: none;
+}
+
+.display-none-important {
+    display: none !important;
+}
+
+.display-block {
+    display: block;
+}
+
+.display-inline-block {
+    display: inline-block;
+}
+
+.visible-hidden {
+    visibility: hidden;
+}
+
+.block-center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    float: none;
+}
+
+.clear-both {
+    clear: both;
+}
+
+/* Margin Helpers */
+.margin-top {
+    margin-top: 24px;
+}
+
+.margin-bottom {
+    margin-bottom: 24px;
+}
+
+.margin-top-small {
+    margin-top: 12px;
+}
+
+.margin-bottom-small {
+    margin-bottom: 12px;
+}
