--- a/Src/coreGrid.scss
+++ b/Src/coreGrid.scss
@@ -229,3 +229,17 @@ $col-width: ($container-width / 12);
 .margin-bottom-small {
     margin-bottom: 12px;
 }
+
+//#region Line Hight Set http://csswizardry.com/2012/06/single-direction-margin-declarations/
+html {
+    font-size: 16px;
+    line-height: 1.5rem;
+}
+
+h1, h2, h3, h4, h5, h6, hgroup,
+ul, ol, dl, blockquote, p, address,
+table, fieldset, figure, pre, .header, img {
+    margin: 0;
+    margin-bottom: 1.5rem;
+}
+//#endregion
