--- a/Src/coreGrid.scss
+++ b/Src/coreGrid.scss
@@ -3,7 +3,7 @@
 /*! 
     https://github.com/splintercode/CoreGrid
     MIT License http://opensource.org/licenses/MIT
-    Core Grid 1.5.2
+    Core Grid 1.6.0
 */
 
 $container-width: 1100px;
@@ -36,18 +36,6 @@ $cols: 12;
 
 .omega {
     padding-right: 0;
-}
-
-.float-left {
-    float: left;
-}
-
-.float-right {
-    float: right;
-}
-
-.clear-both {
-    clear: both;
 }
 
 .clearfix:after {
@@ -181,7 +169,7 @@ $col-width: ($container-width / 12);
 }
 /* #endregion */
 
-/* --- Display --- */
+/* --- Layout helpers --- */
 .display-none {
     display: none;
 }
@@ -209,8 +197,29 @@ $col-width: ($container-width / 12);
     float: none;
 }
 
+.float-left {
+    float: left;
+}
+
+.float-right {
+    float: right;
+}
+
 .clear-both {
     clear: both;
+}
+
+/* Line Hight Set http://csswizardry.com/2012/06/single-direction-margin-declarations/ */
+html {
+    font-size: 16px;
+    line-height: 1.5rem;
+}
+
+h1, h2, h3, h4, h5, h6, hgroup,
+ul, ol, dl, blockquote, p, address,
+table, fieldset, figure, pre, .header, img {
+    margin: 0;
+    margin-bottom: 1.5rem;
 }
 
 /* Margin Helpers */
@@ -229,17 +238,3 @@ $col-width: ($container-width / 12);
 .margin-bottom-small {
     margin-bottom: 12px;
 }
-
-//#region Line Hight Set http://csswizardry.com/2012/06/single-direction-margin-declarations/
-html {
-    font-size: 16px;
-    line-height: 1.5rem;
-}
-
-h1, h2, h3, h4, h5, h6, hgroup,
-ul, ol, dl, blockquote, p, address,
-table, fieldset, figure, pre, .header, img {
-    margin: 0;
-    margin-bottom: 1.5rem;
-}
-//#endregion
