--- a/Content/index.scss
+++ b/Content/index.scss
@@ -38,6 +38,14 @@ header {
     }
 }
 
+code {
+    background: #ddd;
+}
+
+.language-css, .language-markup {
+    background: none;
+}
+
 h2, h3, a {
     margin: 1% 0;
     color: #51AD38;
